src/mongo/util/net/sock.cpp
@@ -42,6 +42,7 @@
 #include "mongo/util/concurrency/value.h"
 #include "mongo/util/fail_point_service.h"
 #include "mongo/util/mongoutils/str.h"
+#include "mongo/util/timer.h"
 #include "mongo/db/cmdline.h"
 
 namespace mongo {
@@ -480,7 +481,7 @@ namespace mongo {
         setsockopt( _fd , SOL_SOCKET, SO_NOSIGPIPE, &one, sizeof(int));
 #endif
 
-        _fdCreationMicroSec = curTimeMicros64();
+        _fdCreationMicroSec = getProgramUptimeMicros();
         return true;
     }
 
